# HPC-with-shared-memory

./: CMakeLists.txt  README.md
include/: util.hpp
src/: hw2.cpp  util.cpp
test/: test.cpp
